--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
 
 dependencies {
 
+    implementation "androidx.room:room-rxjava2:2.5.0"
+    implementation "androidx.room:room-rxjava3:2.5.0"
+    implementation "androidx.room:room-guava:2.5.0"
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
